# python-ci-cd-test

./: Dockerfile  Makefile  README.md  pyproject.toml  pytest.ini
.github/workflows/: CI.yml  lint.yml  ruff.yml
app/: math_ops.py
tests/: test_math_ops.py
