[project]
name = "python-ci-cd-test"
version = "0.1.0"
description = ""
readme = "README.md"
license = "MIT"
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard]>=0.129.2",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.2",
]

[tool.ruff]
preview = true

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "CPY",      # Random copyright things
    "T2",       # Alows print statements lmao
    "FURB118",  # Random garbage rule
    "D1",       # Stupid docstring stuff
    "D401",     # This rule requiores docstring to be in a non-imperative-mood
    "EM",       # Weird error messages
    "ISC003",   # Weird string concatenation rules
    "TRY003",   # Weird raise exception rules
    "ERA001",   # This disallows out commented code
    "SIM105", 
    "PGH003",   # blanket-type-ignore
    "D203",     # pydocstyle: one-blank-line-before-class
    "D212",     # pydocstyle: multi-line-summary-first-line
    "TD001",    # flake8-todos: invalid-todo-tag
    "PYI011",   # typed-argument-default-in-stub
    "PYI014",   # argument-default-in-stub
    "PYI053",   # string-or-bytes-too-long
    "FIX",      # Line-contains-todo
    "TD002",    # Missing author in TODO
    "TD003",    # Missing-todo-link
    "PLR2004",  # Allow magic values
    "COM812",   # missing-trailing-comma
]
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
docstring-code-format = true 

# Potentially needs this if stuff is in .app
#[tool.ty.environment]
#root = ["./app"]

[tool.ruff.lint.per-file-ignores]
"**/{tests,docs,tools}/*" = [
    "E402",    # Ignore unused imports in test etc
    "S101",    # Allow asserts in test
    "ARG",     # Unused function args -> fixtures nevertheless are functionally relevant...
    "FBT",     # Don't care about booleans as positional arguments in tests, e.g. via @pytest.mark.parametrize()
    "S311",    # Standard pseudo-random generators are not suitable for cryptographic purposes
]
